OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.2.0 (2018-02-??)
------------------
- ALL: A number of API calls have been added:
  * Set Delete Status: https://siel.nl/acumulus/API/Entry/Set_Delete_Status/
  * Get Entry (Boeking) Details: https://siel.nl/acumulus/API/Entry/Get_Entry_Details/
  * Payment - Get status: https://siel.nl/acumulus/API/Invoicing/Payment_Get_Status/
  * Payment - Set status: https://siel.nl/acumulus/API/Invoicing/Payment_Set_Status/
  * Email invoice or reminder: https://siel.nl/acumulus/API/Invoicing/Email/
  * Get PDF Invoice: https://siel.nl/acumulus/API/Invoicing/Get_PDF_Invoice/
  * Get PDF Packing Slip: https://siel.nl/acumulus/API/Delivery/Get_PDF_Packing_Slip/
  This allows us to add numerous features in upcoming releases.

5.1.2 (2018-02-14)
------------------
- ALL: currency meta informatie wordt nu gebruikt om bestellingen in andere
  currencies te converteren naar euro's. Dit werkt voor zover de shop de meta
  info correct weet aan te leveren.
- ALL: Als de standaard currency v/d shop geen euro is, maar de order wel, maar
  bedragen worden opgeslagen in de standaard valuta wordt de factuur ook
  geconverteerd naar euros.
- VM: Ondersteuning voor andere currencies. Alleen meta-info, opslag is altijd
  in base currency.
- HS: Ondersteuning voor andere currencies. Er zit een fout in HS zelf als je
  een getoonde maar niet gepubliceerde valuta gebruikt: de verzendkosten worden
  dan fout getoond en opgeslagen.
- WC: Ondersteuning voor andere currencies. Alleen meta info, WC ondersteunt
  geen andere currencies.
- MA: Ondersteuning voor andere currencies. Alleen meta-info, opslag is altijd
  in base currency.