@@ -19,6 +19,12 @@ WC3 = WooCommerce 3 (WordPress)
 
 5.2.0 (2018-02-??)
 ------------------
+- ALL: Als je vanaf nu een factuur opnieuw en geforceerd verstuurd, zal de oude
+  boeking de "verwijderd" status krijgen. Je ontvangt hierover een mail.
+- ALL: toegang op veldniveau tot acumulus entry records
+- ALL: fouten en waarschuwingen van een ander API request (bv opvragen btw
+  tarieven of verwijderen oude entry) kunnen worden toegvoegd aan het overall
+  resultaat van de hoofdbewerking (waarschijnlijk add invoice).
 - ALL: A number of API calls have been added:
   * Set Delete Status: https://siel.nl/acumulus/API/Entry/Set_Delete_Status/
   * Get Entry (Boeking) Details: https://siel.nl/acumulus/API/Entry/Get_Entry_Details/
